dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_shutdown_idempotent.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Sent FIN stream_id=42
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:713:25
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:515:21
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=Shutdown next_offset=0 inflight_bytes=0 remote_max_data=14720
